Modified Main.java, created a method to open files
Added hyperlinks to the left bar with opening menu, gui not perfect yet